--- a/templates/pages/add_snippet.html
+++ b/templates/pages/add_snippet.html
@@ -4,32 +4,13 @@
 
         <div class="row">
             <div class="col">
-                <form action="" method="post">
-                    <div class="form-group row">
-                        <div class="col-sm-8">
-                            <input type="text" class="form-control form-control-lg" placeholder="Название сниппета">
-                        </div>
-                    </div>
-                    <div class="form-group row">
-                        <div class="col-sm-8">
-                            <div class="dropdown">
-                                <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton"
-                                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                    Язык сниппета
-                                </button>
-                                <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                                    <a class="dropdown-item" href="#">Python</a>
-                                    <a class="dropdown-item" href="#">JavaScript</a>
-                                    <a class="dropdown-item" href="#">C++</a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="form-group row">
-                        <div class="col">
-                            <textarea cols="96" rows="10" placeholder="Код сниппета"></textarea>
-                        </div>
-                    </div>
+                <form action="/snippets/create" method="post">
+                    {% csrf_token %}
+                    {{form.as_p}}
+
+
+
+
                     <div class="form-group row">
                         <div class="col-8">
                             <input type="submit" class="btn btn-primary btn-block" value="Сохранить">
@@ -41,3 +22,32 @@
         </div>
 
 {% endblock %}
+
+
+
+<!--                    <div class="form-group row">-->
+<!--                        <div class="col-sm-8">-->
+<!--                            <input name="name" type="text" class="form-control form-control-lg" placeholder="Название сниппета">-->
+<!--                        </div>-->
+<!--                    </div>-->
+<!--                    <div class="form-group row">-->
+<!--                        <div class="col-sm-8">-->
+<!--                            <div class="dropdown">-->
+<!--                                <input name ="lang" type = "text"  placeholder="Язык сниппета">-->
+<!--&lt;!&ndash;                                <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton"&ndash;&gt;-->
+<!--&lt;!&ndash;                                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">&ndash;&gt;-->
+<!--&lt;!&ndash;                                    Язык сниппета&ndash;&gt;-->
+<!--&lt;!&ndash;                                </button>&ndash;&gt;-->
+<!--&lt;!&ndash;                                <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">&ndash;&gt;-->
+<!--&lt;!&ndash;                                    <a class="dropdown-item" href="#">Python</a>&ndash;&gt;-->
+<!--&lt;!&ndash;                                    <a class="dropdown-item" href="#">JavaScript</a>&ndash;&gt;-->
+<!--&lt;!&ndash;                                    <a class="dropdown-item" href="#">C++</a>&ndash;&gt;-->
+<!--&lt;!&ndash;                                </div>&ndash;&gt;-->
+<!--                            </div>-->
+<!--                        </div>-->
+<!--                    </div>-->
+<!--                    <div class="form-group row">-->
+<!--                        <div class="col">-->
+<!--                            <textarea name="code" cols="96" rows="10" placeholder="Код сниппета"></textarea>-->
+<!--                        </div>-->
+<!--                    </div>-->
