--- a/templates/pages/view_snippets.html
+++ b/templates/pages/view_snippets.html
@@ -2,18 +2,46 @@
 
 {% block content%}
 
-        <div class="row">
-            <div class="col">
-                <p>На данной страницы будут отображаться все созданные сниппеты.</p>
-                <p>Пока тут пусто, скоро мы это исправим!</p>
-                <hr>
-            </div>
+<div class="row">
+    <div class="col">
+        <p>На данной страницы будут отображаться все созданные сниппеты.</p>
+        <p>Пока тут пусто, скоро мы это исправим!</p>
+        <hr>
+    </div>
+</div>
+
+<div class="row">
+    <div class="col-6 offset-2">
+        Список сниппетов:
+        <table class="table table-striped">
+            <thead class="thead-dark">
+            <tr>
+                <th scope="col">ID</th>
+                <th scope="col">Название</th>
+                <th scope="col">Язык</th>
+                <th scope="col">Код</th>
+                <th scope="col">Дата создания</th>
+            </tr>
+            </thead>
+            <tbody>
+
+            {% for snippet in snippets %}
+            <tr>
+                <td scope="row">{{snippet.id}}</td>
+                <td><a href="{%url 'snippet-edit' snippet.id %}">{{snippet.name}}</a></td>
+                <td scope="row">{{snippet.lang}}</td>
+                <td scope="row">{{snippet.code}}</td>
+                <td scope="row">{{snippet.creation_date|date:'d.m.Y'}}</td>
+            </tr>
+            {% endfor %}
+            </tbody>
+        </table>
+        <div align="right">
+            <i style="color: gray;">Всего сниппетов: {{snippets|length}}</i>
         </div>
 
-        <div class="row">
-            <div class="col-4 offset-2">
-                Список сниппетов:
-            </div>
-        </div>
+
+    </div>
+</div>
 
 {% endblock %}
