--- a/templates/pages/add_snippet.html
+++ b/templates/pages/add_snippet.html
@@ -4,7 +4,7 @@
 
         <div class="row">
             <div class="col">
-                <form action="/snippets/create" method="post">
+                <form action="" method="post">
                     {% csrf_token %}
                     {{form.as_p}}
 
